--- a/docs/md/06. IOC, DI.md
+++ b/docs/md/06. IOC, DI.md
@@ -26,11 +26,11 @@
 - 그런데 이러한 클래스 의존관계 만으로는 실제 어떤 객체가 OrderServiceImpl 에 주입 될지 알 수 없다. 
 
 ### 클래스 다이어그램
-![img_19.png](img_19.png)
+![img_19.png](assets/img_19.png)
 
 ### 동적인 객체 인스턴스 의존 관계
  애플리케이션 실행 시점에 실제 생성된 객체 인스턴스의 참조가 연결된 의존 관계다.
-![img_20.png](img_20.png)
+![img_20.png](assets/img_20.png)
 
 - 애플리케이션 실행 시점(런타임)에 외부에서 실제 구현 객체를 생성하고 클라이언트에 전달해서 클라이언트와 서버의 실제 의존관계가 연결 되는 것을 의존관계 주입이라 한다.
 - 객체 인스턴스를 생성하고, 그 참조값을 전달해서 연결된다.
